# File_EXplorer

./: .gitignore  Achille.cpp  Achille.h  Actions.cpp  Actions.h  Analysa.h  Archiva.cpp  Archiva.h  CMakeLists.txt  Dialog.cpp  Dialog.h  FenPrincipale.cpp  FenPrincipale.h  FileTransfertHome.cpp  FileTransfertHome.h  File_EXplorer.pro  File_EXplorer.pro.user.0fba644  File_EXplorer.pro.user.86207a5  File_EXplorer.pro.user.f5bebb9  MainWindow.cpp  MainWindow.h  MenuP.h  NavBar.cpp  NavBar.h  README.md  Resources.qrc  ToolBarP.cpp  ToolBarP.h  archiva.py  disks.cpp  essai.py  leftWidget.h  main.cpp  searchbar.cpp  searchbar.h  tabwidget.cpp  tabwidget.h  udisks2.cpp  udisks2.h
Views/: DirView.cpp  DirView.h  leftView.cpp  leftView.h
components/: Actions.cpp  Actions.h  Analysa.cpp  Archiva.cpp  Archiva.h  CentralWidget.cpp  CentralWidget.h  Dialog.cpp  Dialog.h  MenuP.cpp  NavBar.h  ToolBarP.h  Welcome.cpp  Welcome.h  disks.h  leftWidget.cpp  leftWidget.h  searchbar.h  tabwidget.cpp  tabwidget.h
libs/: libquazip.so.1.0.0
libs/QRoundProgressBar/: QRoundProgressBar.cpp
libs/quazip/: JlCompress.cpp  JlCompress.h  ioapi.h  qioapi.cpp  quaadler32.cpp  quacrc32.cpp  quagzipfile.h  quaziodevice.h  quazip_global.h  unzip.c  unzip.h  zip.c  zip.h
libs/sauva/quazip-1.3/: quazip.pro
libs/sauva/quazip-1.3/build-quazip-Desktop_Qt_6_2_4_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
libs/sauva/quazip-1.3/quazip/: CMakeLists.txt
libs/sauva/zlib/: Makefile
libs/sauva/zlib/ai/: example  example64  examplesh  libz.so.1.2.11.1-motley  minigzip  minigzip64  minigzipsh
menu/: BackgroundContextMenu.cpp  BackgroundContextMenu.h  FileContextMenu.cpp  FileContextMenu.h  MultiContextMenu.cpp  MultiContextMenu.h  folderContextMenu.cpp  folderContextMenu.h
menu/Dialogs/: FileD.cpp  FileD.h  FolderD.cpp  FolderD.h  MultiD.cpp  MultiD.h  Progressa.cpp  Progressa.h  PyGetFolderSize.py  SortD.cpp  SortD.h  backD.cpp  backD.h  openWith.cpp  openWith.h
toolbars/: toolbarfichiers.cpp  toolbarfichiers.h
